# maas-test

./: .gitignore  .gitmodules  AGENTS.md  README.md  chat_models.json  chat_test_support.py  conftest.py  csv_report.py  draft.md  findings.md  main.py  model_aliases.py  progress.md  pyproject.toml  task_plan.md  test_chat.py  test_chat_sdk_smoke.py  test_chat_strict.py  test_context_length.py  test_csv_reporting.py  test_run.md  test_tool_calling.py  测试功能点.md
datasets/k2/: smoke.jsonl
k2_verifier/: __init__.py  cli.py  core.py
multi_turn/: benchmark_serving_multi_turn.py
tests/: chat_test_support.py  conftest.py  csv_report.py  test_api_compatibility.py  test_chat.py  test_chat_sdk_smoke.py  test_context_length.py  test_csv_reporting.py  test_k2_verifier.py  test_long_context.py  test_main_reporting.py  test_probe_stream_behavior.py  test_tool_calling.py
tests/fixtures/k2/: tool_calling_subset.jsonl  verifier_smoke.jsonl
tests/unit/: test_benchmark_serving_multi_turn.py  test_csv_reporting.py  test_disable_thinking_assertions.py  test_feature_points_alignment.py  test_k2_verifier.py  test_main_case_filter.py  test_main_reporting.py  test_model_aliases.py  test_probe_stream_behavior.py
