[project]
name = "maas-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "openai>=2.26.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "socksio>=1.0.0",
]

[tool.pytest.ini_options]
markers = [
    "sdk_smoke: OpenAI Python SDK smoke coverage that is skipped unless --run-sdk-smoke is set.",
    "strict_compat: Strict OpenAI-compatible audit coverage that is skipped unless --run-strict-compat is set.",
]
